Fix inline code/kbd/samp/var vertical padding (picocss/pico#651). Align var padding with code elements.

--- a/css/mu.component.var.css
+++ b/css/mu.component.var.css
@@ -8,7 +8,7 @@ var {
 	font-size: 0.875em;
 	font-style: italic;
 	display: inline-block;
-	padding: 0.375rem;
+	padding: 0.125rem 0.375rem;
 	border-radius: var(--mu-border-radius);
 	background: var(--mu-code-background-color);
 	color: var(--mu-code-color);
